[ISSUE 5] add user context

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.8",
     "regenerator": "^0.14.7"
   },
   "devDependencies": {
